--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             </div>
           </div>
           <div class="post__footer">
-                <span class="material-icons repeat-icon" data-id-name="1">repeat</span>  
-                <span class="material-icons love-icon">favorite_border</span>
-                <span class="material-icons share-icon">publish</span>
+            <i class="fa-solid fa-retweet material-icons repeat-icon"></i>
+            <i class="fa-regular fa-heart material-icons love-icon"></i>
+            <i class="fa-solid fa-arrow-up-from-bracket material-icons share-icon"></i>
           </div>
          </div>
         </div> 
