--- a/index.html
+++ b/index.html
@@ -110,25 +110,25 @@
         <div class="trend__element">
           <div class="trending__header">
             <h5>1 · Entertainment · Trending</h5>
-            <span class="material-icons">more_horiz</span>
+            <i class="fa-solid fa-ellipsis material-icons"></i>
           </div>
-          <h3>#DCFanDome</h3>
+          <h3>#West Bank</h3>
           <h5 class="tweets__number">430K Tweets</h5>
         </div>
         <div class="trend__element">
           <div class="trending__header">
             <h5>1 · Sport · Trending</h5>
-            <span class="material-icons">more_horiz</span>
+            <i class="fa-solid fa-ellipsis material-icons"></i>
           </div>
-          <h3>Chilwell</h3>
+          <h3>barcelona</h3>
           <h5 class="tweets__number">190K Tweets</h5>
         </div>
         <div class="trend__element">
           <div class="trending__header">
-            <h5>1 · Sport · Trending</h5>
-            <span class="material-icons">more_horiz</span>
+            <h5>1 · music · Trending</h5>
+            <i class="fa-solid fa-ellipsis material-icons"></i>
           </div>
-          <h3>Icardi</h3>
+          <h3>Eminem</h3>
           <h5 class="tweets__number">10K Tweets</h5>
         </div>
         <h3 class="show__more">Show more</h3>
